Social icons aligning issue

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -47,6 +47,8 @@
 			background-size: 120%;
 			background-color: transparent;
 			border: 2px solid @color-swatch3;
+			text-indent: 1000px;
+			overflow: hidden;
 			
 			&:hover {
 				border-color: darken(@color-swatch2, 10%);
